apps/trivy/dashboard/httproute.yaml
---
# yaml-language-server: $schema=https://k8s-schemas.wynning.tech/gateway.networking.k8s.io/httproute_v1.json
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: trivy-operator-dashboard
spec:
  parentRefs:
    - name: envoy-internal
      namespace: networking
      sectionName: https
  hostnames:
    - "trivy.${SECRET_INTERNAL_DOMAIN}"
  rules:
    - backendRefs:
        - name: trivy-operator-dashboard
          port: 8900
